# wasm-exif

./: .gitignore  CMakeLists.txt  exe.sh  wasm.sh
src/exe/: main.cpp
src/lib/: parser.cpp  parser.hpp
src/wasm/: header.h  main.cpp
